# cds-daintree

./: .gitignore  .sparkles  Dockerfile  README.md  TODO.txt  daintree_runner  pyproject.toml  run-example.sh
daintree/: .gitignore  Dockerfile  breadbox_id_validation.py  config.py  daintree_fit_models.py  image-name  model-map-cellcontext.json  model-map-dna.json  model-map-driverevents.json  model-map-geneticderangement.json  model-map-oncref.json  model-map-rnaseq.json  model-map.json  output-model-config.json  run-daintree.sh  run_fit_models.py  run_pred_pipeline.py  taiga_utils.py  utils.py  validate_run.py
daintree-core/: README.md  pyproject.toml
daintree-sparkles/: Dockerfile  image-name  run_fit_models.py  utils.py
daintree/daintree/: main.py  parsing_utilities.py  prepare_features.py  prepare_targets.py  run_ensemble.py
daintree/daintree_package/: pyproject.toml
daintree/daintree_package/daintree_package/: main.py  prepare_features.py  run_ensemble.py
daintree/daintree_scripts/: config.py  math_utils.py  run_fit_models.py  utils.py
daintree/model-map-configs/: model-map-cellcontext-rnai.json  model-map-dna-rnai.json  model-map-dna.json  model-map-driverevents-rnai.json  model-map-driverevents.json  model-map-geneticderangement-rnai.json  model-map-geneticderangement.json  model-map-rnaseq-rnai.json  model-map-rnaseq.json
daintree/output_data/nayeem-test/: X.ftr  X_feature_metadata.ftr  X_valid_samples.ftr  completed_jobs.txt  dep-filtered.ftr  model-config_temp_.yaml
daintree_core/: main.py  prepare_features.py  run_ensemble.py
daintree_runner/: config.py  config_manager.py  data_processor.py  gather.py  main.py  prepare.py  run_fit_models.py  utils.py
daintree_scripts/: config.py  config_manager.py  data_processor.py  gather.py  prepare.py  run_fit_models.py  utils.py
example/: run-daintree.sh  sparkles-config
sparkles-run-docker-image/: Dockerfile  image-name
test/: daintree_runner_test.py  step1.py  step2.py  with-sparkles-1.py  with-sparkles-2.py  with-sparkles-worker.py
test/daintree_core/: test_fit.py
test/daintree_runner/: test_gather.py  test_prepare.py
