[tool.poetry]
name = "daintree_package"
version = "0.1.0"
description = "Daintree Package"
authors = ["Nayeem Aquib <naquib@broadinsitute.org>"]
readme = "README.md"
packages = [{include = "daintree_package"}]


[tool.poetry.dependencies]
python = ">3.7,<3.10"  # Assuming a minimum Python version of 3.7
click = ">=7,<8"
pandas = ">=1,<2"
pyarrow = ">=3,<4"
pyyaml = ">=5,<6"
scikit-learn = ">=0,<1"
typing-extensions = ">=3,<4"

[tool.poetry.scripts]
cds-ensemble = "daintree_package.__main__:main"


[[tool.poetry.source]]
name = "gcp-artifact-registry"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
